testdata/baselines/reference/effect-v3/effectInFailure.flows.txt
==== /.src/effectInFailure.ts (11 flows) ====

=== Effect Flow ===
Kind: pipeline
Location: 3:29 - 3:64
Root: Data.TaggedError("JsonParseError")
Path (3 nodes):
  [0] root {plain A=new <A extends Record<string, any> = {}>(args: Equals<A, {}> extends true ? void : { readonly [P in keyof A as P extends "_tag" ? never : P]: A[P]; }) => YieldableError & { readonly _tag: "JsonParseError"; } & Readonly<A>} pipeline
      ==> [subject] -> [1]
  [1] pipeSubject {plain A="JsonParseError"} "JsonParseError"
      ~> [call] -> [2]
  [2] pipeTransformation {plain A=new <A extends Record<string, any> = {}>(args: Equals<A, {}> extends true ? void : { readonly [P in keyof A as P extends "_tag" ? never : P]: A[P]; }) => YieldableError & { readonly _tag: "JsonParseError"; } & Readonly<A>} step 0: Data.TaggedError

Nodes (3):
  [0] kind: root
      label: pipeline
      ordinal: 0
      result.kind: plain
      result.A: new <A extends Record<string, any> = {}>(args: Equals<A, {}> extends true ? void : { readonly [P in keyof A as P extends "_tag" ? never : P]: A[P]; }) => YieldableError & { readonly _tag: "JsonParseError"; } & Readonly<A>
      result.E: 
      result.R: 
  [1] kind: pipeSubject
      label: "JsonParseError"
      ordinal: 0
      result.kind: plain
      result.A: "JsonParseError"
      result.E: 
      result.R: 
  [2] kind: pipeTransformation
      label: step 0: Data.TaggedError
      ordinal: 0
      result.kind: plain
      result.A: new <A extends Record<string, any> = {}>(args: Equals<A, {}> extends true ? void : { readonly [P in keyof A as P extends "_tag" ? never : P]: A[P]; }) => YieldableError & { readonly _tag: "JsonParseError"; } & Readonly<A>
      result.E: 
      result.R: 
Edges (2):
  0 -> 1 [strong] subject
  1 -> 2 [weak] call

=== Effect Flow ===
Kind: pipeline
Location: 5:28 - 8:3
Root: Effect.try({\n  try: () => JSON.parse("{"),\n  catch: (e) => Effect.log(e)\n})
Path (3 nodes):
  [0] root {effect A=any E=Effect<void, never, never> R=never} pipeline
      ==> [subject] -> [1]
  [1] pipeSubject {plain A={ try: () => any; catch: (e: unknown) => Effect<void, never, never>; }} {\n  try: () => JSON.parse("{"),\n  catch: (e) => Effect.log(e)\n}
      ~> [call] -> [2]
  [2] pipeTransformation {effect A=any E=Effect<void, never, never> R=never} step 0: Effect.try

Nodes (3):
  [0] kind: root
      label: pipeline
      ordinal: 0
      result.kind: effect
      result.A: any
      result.E: Effect<void, never, never>
      result.R: never
  [1] kind: pipeSubject
      label: {\n  try: () => JSON.parse("{"),\n  catch: (e) => Effect.log(e)\n}
      ordinal: 0
      result.kind: plain
      result.A: { try: () => any; catch: (e: unknown) => Effect<void, never, never>; }
      result.E: 
      result.R: 
  [2] kind: pipeTransformation
      label: step 0: Effect.try
      ordinal: 0
      result.kind: effect
      result.A: any
      result.E: Effect<void, never, never>
      result.R: never
Edges (2):
  0 -> 1 [strong] subject
  1 -> 2 [weak] call

=== Effect Flow ===
Kind: pipeline
Location: 6:13 - 6:29
Root: JSON.parse("{")
Path (3 nodes):
  [0] root {plain A=any} pipeline
      ==> [subject] -> [1]
  [1] pipeSubject {plain A="{"} "{"
      ~> [call] -> [2]
  [2] pipeTransformation {plain A=any} step 0: JSON.parse

Nodes (3):
  [0] kind: root
      label: pipeline
      ordinal: 0
      result.kind: plain
      result.A: any
      result.E: 
      result.R: 
  [1] kind: pipeSubject
      label: "{"
      ordinal: 0
      result.kind: plain
      result.A: "{"
      result.E: 
      result.R: 
  [2] kind: pipeTransformation
      label: step 0: JSON.parse
      ordinal: 0
      result.kind: plain
      result.A: any
      result.E: 
      result.R: 
Edges (2):
  0 -> 1 [strong] subject
  1 -> 2 [weak] call

=== Effect Flow ===
Kind: pipeline
Location: 7:16 - 7:30
Root: Effect.log(e)
Path (3 nodes):
  [0] root {effect A=void E=never R=never} pipeline
      ==> [subject] -> [1]
  [1] pipeSubject {plain A=unknown} e
      ~> [call] -> [2]
  [2] pipeTransformation {effect A=void E=never R=never} step 0: Effect.log

Nodes (3):
  [0] kind: root
      label: pipeline
      ordinal: 0
      result.kind: effect
      result.A: void
      result.E: never
      result.R: never
  [1] kind: pipeSubject
      label: e
      ordinal: 0
      result.kind: plain
      result.A: unknown
      result.E: 
      result.R: 
  [2] kind: pipeTransformation
      label: step 0: Effect.log
      ordinal: 0
      result.kind: effect
      result.A: void
      result.E: never
      result.R: never
Edges (2):
  0 -> 1 [strong] subject
  1 -> 2 [weak] call

=== Effect Flow ===
Kind: pipeline
Location: 10:31 - 13:3
Root: Effect.try({\n  try: () => JSON.parse("{"),\n  catch: (e) => new JsonParseError({ cause: e })\n})
Path (3 nodes):
  [0] root {effect A=any E=JsonParseError R=never} pipeline
      ==> [subject] -> [1]
  [1] pipeSubject {plain A={ try: () => any; catch: (e: unknown) => JsonParseError; }} {\n  try: () => JSON.parse("{"),\n  catch: (e) => new JsonParseError({ cause:...
      ~> [call] -> [2]
  [2] pipeTransformation {effect A=any E=JsonParseError R=never} step 0: Effect.try

Nodes (3):
  [0] kind: root
      label: pipeline
      ordinal: 0
      result.kind: effect
      result.A: any
      result.E: JsonParseError
      result.R: never
  [1] kind: pipeSubject
      label: {\n  try: () => JSON.parse("{"),\n  catch: (e) => new JsonParseError({ cause:...
      ordinal: 0
      result.kind: plain
      result.A: { try: () => any; catch: (e: unknown) => JsonParseError; }
      result.E: 
      result.R: 
  [2] kind: pipeTransformation
      label: step 0: Effect.try
      ordinal: 0
      result.kind: effect
      result.A: any
      result.E: JsonParseError
      result.R: never
Edges (2):
  0 -> 1 [strong] subject
  1 -> 2 [weak] call

=== Effect Flow ===
Kind: pipeline
Location: 11:13 - 11:29
Root: JSON.parse("{")
Path (3 nodes):
  [0] root {plain A=any} pipeline
      ==> [subject] -> [1]
  [1] pipeSubject {plain A="{"} "{"
      ~> [call] -> [2]
  [2] pipeTransformation {plain A=any} step 0: JSON.parse

Nodes (3):
  [0] kind: root
      label: pipeline
      ordinal: 0
      result.kind: plain
      result.A: any
      result.E: 
      result.R: 
  [1] kind: pipeSubject
      label: "{"
      ordinal: 0
      result.kind: plain
      result.A: "{"
      result.E: 
      result.R: 
  [2] kind: pipeTransformation
      label: step 0: JSON.parse
      ordinal: 0
      result.kind: plain
      result.A: any
      result.E: 
      result.R: 
Edges (2):
  0 -> 1 [strong] subject
  1 -> 2 [weak] call

=== Effect Flow ===
Kind: pipeline
Location: 15:37 - 22:3
Root: Effect.try({\n  try: () => JSON.parse("{"),\n  catch: (e) =>\n    Effect.try({\n      try: () => JSON.parse(String(e)),\n      catch: (innerError) => Effect.log(innerError)\n    })\n})
Path (3 nodes):
  [0] root {effect A=any E=Effect<any, Effect<void, never, never>, never> R=never} pipeline
      ==> [subject] -> [1]
  [1] pipeSubject {plain A={ try: () => any; catch: (e: unknown) => Effect<any, Effect<void, never, never>, never>; }} {\n  try: () => JSON.parse("{"),\n  catch: (e) =>\n    Effect.try({\n      tr...
      ~> [call] -> [2]
  [2] pipeTransformation {effect A=any E=Effect<any, Effect<void, never, never>, never> R=never} step 0: Effect.try

Nodes (3):
  [0] kind: root
      label: pipeline
      ordinal: 0
      result.kind: effect
      result.A: any
      result.E: Effect<any, Effect<void, never, never>, never>
      result.R: never
  [1] kind: pipeSubject
      label: {\n  try: () => JSON.parse("{"),\n  catch: (e) =>\n    Effect.try({\n      tr...
      ordinal: 0
      result.kind: plain
      result.A: { try: () => any; catch: (e: unknown) => Effect<any, Effect<void, never, never>, never>; }
      result.E: 
      result.R: 
  [2] kind: pipeTransformation
      label: step 0: Effect.try
      ordinal: 0
      result.kind: effect
      result.A: any
      result.E: Effect<any, Effect<void, never, never>, never>
      result.R: never
Edges (2):
  0 -> 1 [strong] subject
  1 -> 2 [weak] call

=== Effect Flow ===
Kind: pipeline
Location: 16:13 - 16:29
Root: JSON.parse("{")
Path (3 nodes):
  [0] root {plain A=any} pipeline
      ==> [subject] -> [1]
  [1] pipeSubject {plain A="{"} "{"
      ~> [call] -> [2]
  [2] pipeTransformation {plain A=any} step 0: JSON.parse

Nodes (3):
  [0] kind: root
      label: pipeline
      ordinal: 0
      result.kind: plain
      result.A: any
      result.E: 
      result.R: 
  [1] kind: pipeSubject
      label: "{"
      ordinal: 0
      result.kind: plain
      result.A: "{"
      result.E: 
      result.R: 
  [2] kind: pipeTransformation
      label: step 0: JSON.parse
      ordinal: 0
      result.kind: plain
      result.A: any
      result.E: 
      result.R: 
Edges (2):
  0 -> 1 [strong] subject
  1 -> 2 [weak] call

=== Effect Flow ===
Kind: pipeline
Location: 17:16 - 21:7
Root: Effect.try({\n      try: () => JSON.parse(String(e)),\n      catch: (innerError) => Effect.log(innerError)\n    })
Path (3 nodes):
  [0] root {effect A=any E=Effect<void, never, never> R=never} pipeline
      ==> [subject] -> [1]
  [1] pipeSubject {plain A={ try: () => any; catch: (innerError: unknown) => Effect<void, never, never>; }} {\n      try: () => JSON.parse(String(e)),\n      catch: (innerError) => Effe...
      ~> [call] -> [2]
  [2] pipeTransformation {effect A=any E=Effect<void, never, never> R=never} step 0: Effect.try

Nodes (3):
  [0] kind: root
      label: pipeline
      ordinal: 0
      result.kind: effect
      result.A: any
      result.E: Effect<void, never, never>
      result.R: never
  [1] kind: pipeSubject
      label: {\n      try: () => JSON.parse(String(e)),\n      catch: (innerError) => Effe...
      ordinal: 0
      result.kind: plain
      result.A: { try: () => any; catch: (innerError: unknown) => Effect<void, never, never>; }
      result.E: 
      result.R: 
  [2] kind: pipeTransformation
      label: step 0: Effect.try
      ordinal: 0
      result.kind: effect
      result.A: any
      result.E: Effect<void, never, never>
      result.R: never
Edges (2):
  0 -> 1 [strong] subject
  1 -> 2 [weak] call

=== Effect Flow ===
Kind: pipeline
Location: 19:17 - 19:39
Root: JSON.parse(String(e))
Path (4 nodes):
  [0] root {plain A=any} pipeline
      ==> [subject] -> [1]
  [1] pipeSubject {plain A=unknown} e
      ~> [call] -> [2]
  [2] pipeTransformation {plain A=string} step 0: String
      ~> [call] -> [3]
  [3] pipeTransformation {plain A=any} step 1: JSON.parse

Nodes (4):
  [0] kind: root
      label: pipeline
      ordinal: 0
      result.kind: plain
      result.A: any
      result.E: 
      result.R: 
  [1] kind: pipeSubject
      label: e
      ordinal: 0
      result.kind: plain
      result.A: unknown
      result.E: 
      result.R: 
  [2] kind: pipeTransformation
      label: step 0: String
      ordinal: 0
      result.kind: plain
      result.A: string
      result.E: 
      result.R: 
  [3] kind: pipeTransformation
      label: step 1: JSON.parse
      ordinal: 1
      result.kind: plain
      result.A: any
      result.E: 
      result.R: 
Edges (3):
  0 -> 1 [strong] subject
  1 -> 2 [weak] call
  2 -> 3 [weak] call

=== Effect Flow ===
Kind: pipeline
Location: 20:29 - 20:52
Root: Effect.log(innerError)
Path (3 nodes):
  [0] root {effect A=void E=never R=never} pipeline
      ==> [subject] -> [1]
  [1] pipeSubject {plain A=unknown} innerError
      ~> [call] -> [2]
  [2] pipeTransformation {effect A=void E=never R=never} step 0: Effect.log

Nodes (3):
  [0] kind: root
      label: pipeline
      ordinal: 0
      result.kind: effect
      result.A: void
      result.E: never
      result.R: never
  [1] kind: pipeSubject
      label: innerError
      ordinal: 0
      result.kind: plain
      result.A: unknown
      result.E: 
      result.R: 
  [2] kind: pipeTransformation
      label: step 0: Effect.log
      ordinal: 0
      result.kind: effect
      result.A: void
      result.E: never
      result.R: never
Edges (2):
  0 -> 1 [strong] subject
  1 -> 2 [weak] call
